[tool.poetry]
name = "uladzislau97_brain_games"
version = "0.2.2"
description = ""
authors = ["Uladzislau Vasilyeu <VSvasilyev97@gmail.com>"]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.7"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
